--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -15,10 +15,10 @@ jobs:
           python-version: 3.8
       - name: Build and Upload to PyPI
         run:
-          python3 pip install --upgrade pip
-          python3 pip install setuptools wheel twine
+          python3 -m pip install --upgrade pip
+          python3 -m pip install setuptools wheel twine
           python3 setup.py sdist bdist_wheel
-          python3 twine upload dist/*
+          python3 -m twine upload dist/*
         env:
           TWINE_USERNAME: ${{ secrets.pypi_username }}
           TWINE_PASSWORD: ${{ secrets.pypi_password }}
