--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -18,7 +18,7 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install setuptools wheel twine
           python3 setup.py sdist bdist_wheel
-          python3 -m twine upload dist/*
+          python3 twine upload dist/*
         env:
           TWINE_USERNAME: ${{ secrets.pypi_username }}
           TWINE_PASSWORD: ${{ secrets.pypi_password }}
