--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -20,6 +20,6 @@ jobs:
           python3 setup.py sdist bdist_wheel
           python3 -m twine upload dist/*
         env:
-          TWINE_USERNAME: ${{ secrets.pypi_username }}
+          TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.pypi_password }}
           TWINE_REPOSITORY: linuxserver
