--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -22,4 +22,4 @@ jobs:
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.pypi_password }}
-          TWINE_REPOSITORY: linuxserver
+          TWINE_REPOSITORY: https://test.pypi.org/legacy/
