--- a/src/cli/docker/jackett-compose.yml
+++ b/src/cli/docker/jackett-compose.yml
@@ -14,4 +14,5 @@ services:
       - {{ downloads }}:/downloads
     ports:
       - 9117:9117
+    network_mode: container:gluetun
     restart: unless-stopped
