--- a/src/cli/docker/plex-compose.yml
+++ b/src/cli/docker/plex-compose.yml
@@ -13,4 +13,5 @@ services:
       - {{ config }}:/config
       - {{ series }}:/tv
       - {{ movies }}:/movies
+    network_mode: container:gluetun
     restart: unless-stopped
