--- a/src/cli/docker/sonarr-compose.yml
+++ b/src/cli/docker/sonarr-compose.yml
@@ -13,4 +13,5 @@ services:
       - {{ downloads }}:/downloads #optional
     ports:
       - 8989:8989
+    network_mode: container:gluetun
     restart: unless-stopped
