--- a/src/cli/docker/gluetun-compose.yml
+++ b/src/cli/docker/gluetun-compose.yml
@@ -19,9 +19,9 @@ services:
       - VPN_SERVICE_PROVIDER=mullvad
       - VPN_TYPE=wireguard
       # OpenVPN:
-      - OPENVPN_USER={{ openvpn_user }}
+      - OPENVPN_USER=${OPENVPN_USER}
       # Wireguard:
-      - WIREGUARD_PRIVATE_KEY={{ wireguard_private_key }}
-      - WIREGUARD_ADDRESSES={{ wireguard_addresses }}
+      - WIREGUARD_PRIVATE_KEY=${WIREGUARD_PRIVATE_KEY}
+      - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES}
       # Timezone for accurate log times
       - TZ=
