Updated port forwards

--- a/src/cli/docker/gluetun-compose.yml
+++ b/src/cli/docker/gluetun-compose.yml
@@ -12,6 +12,12 @@ services:
       - 8888:8888/tcp # HTTP proxy
       - 8388:8388/tcp # Shadowsocks
       - 8388:8388/udp # Shadowsocks
+      - 8112:8112 # Deluge
+      - 6881:6881 # Deluge
+      - 6881:6881/udp # Deluge
+      - 9117:9117 # Jackett
+      - 7878:7878 # Radarr
+      - 8989:8989
     volumes:
       - {{ config }}:/gluetun
     environment:
