--- a/src/cli/docker/deluge-compose.yml
+++ b/src/cli/docker/deluge-compose.yml
@@ -11,9 +11,9 @@ services:
     volumes:
       - {{ config }}:/config
       - {{ downloads }}:/downloads
-    ports:
-      - 8112:8112
-      - 6881:6881
-      - 6881:6881/udp
+    # ports:
+    #   - 8112:8112
+    #   - 6881:6881
+    #   - 6881:6881/udp
     network_mode: container:gluetun
     restart: unless-stopped
