Added restart always and Heimdall YML

--- a/src/cli/docker/deluge-compose.yml
+++ b/src/cli/docker/deluge-compose.yml
@@ -12,4 +12,4 @@ services:
       - {{ config }}:/config
       - {{ downloads }}:/downloads
     network_mode: container:gluetun
-    restart: unless-stopped
+    restart: always
