--- a/src/cli/docker/gluetun-compose.yml
+++ b/src/cli/docker/gluetun-compose.yml
@@ -9,15 +9,17 @@ services:
     devices:
       - /dev/net/tun:/dev/net/tun
     ports:
-      - 8888:8888/tcp # HTTP proxy
-      - 8388:8388/tcp # Shadowsocks
-      - 8388:8388/udp # Shadowsocks
-      - 8112:8112 # Deluge
-      - 6881:6881 # Deluge
-      - 6881:6881/udp # Deluge
-      - 9117:9117 # Jackett
-      - 7878:7878 # Radarr
-      - 8989:8989
+      - 8888:8888/tcp   # HTTP proxy
+      - 8388:8388/tcp   # Shadowsocks
+      - 8388:8388/udp   # Shadowsocks
+      - 8112:8112       # Deluge
+      - 6881:6881       # Deluge
+      - 6881:6881/udp   # Deluge
+      - 9117:9117       # Jackett
+      - 7878:7878       # Radarr
+      - 8989:8989       # Sonarr
+      - 80:80           # Heimdall
+      - 443:443         # Heimdall
     volumes:
       - {{ config }}:/gluetun
     environment:
@@ -31,3 +33,4 @@ services:
       - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES}
       # Timezone for accurate log times
       - TZ=
+    restart: always
