--- a/src/cli/docker/jackett-compose.yml
+++ b/src/cli/docker/jackett-compose.yml
@@ -13,4 +13,4 @@ services:
       - {{ config }}:/config
       - {{ downloads }}:/downloads
     network_mode: container:gluetun
-    restart: unless-stopped
+    restart: always
