--- a/src/cli/docker/plex-compose.yml
+++ b/src/cli/docker/plex-compose.yml
@@ -13,4 +13,4 @@ services:
       - {{ config }}:/config
       - {{ series }}:/tv
       - {{ movies }}:/movies
-    restart: unless-stopped
+    restart: always
