--- a/src/cli/docker/heimdall-compose.yml
+++ b/src/cli/docker/heimdall-compose.yml
@@ -1,7 +1,7 @@
 version: "2.1"
 services:
   heimdall:
-    image: lscr.io/linuxserver/heimdall:latest
+    image: linuxserver/heimdall:latest
     container_name: heimdall
     environment:
       - PUID=1000
