--- a/src/cli/docker/radarr-compose.yml
+++ b/src/cli/docker/radarr-compose.yml
@@ -1,7 +1,7 @@
 version: "2.1"
 services:
   radarr:
-    image: lscr.io/linuxserver/radarr:latest
+    image: linuxserver/radarr:latest
     container_name: radarr
     environment:
       - PUID=1000
